--- a/test/fixtures/simple.yaml
+++ b/test/fixtures/simple.yaml
@@ -3,7 +3,7 @@
     pos: [0, -5, 0]
     size: [1, 1]
     up: [0, 0, 1]
-    center: [0, -10, 0]
+    focal_point: [0, -10, 0]
 - sphere:
     name: s0
     pos: [0, 0, 0]
